test/libsolidity/smtCheckerTests/unsupported/transient_storage_state_variable.sol
contract C {
    uint transient x = 42;
    function test() public view { assert(x == 42); }
}
// ====
// SMTEngine: all
// ----
// UnimplementedFeatureError 1834: Transient storage variables are not supported.
